--- a/thoughts.html
+++ b/thoughts.html
@@ -22,7 +22,7 @@
 <main class="gallery-container">
     <div class="carousel-wrapper">
         <div class="carousel">
-            <img src="images/Thought1.jpg" alt="Thought1">
+            <img src="images/Thought1.jpg" alt="Thought1" class="sharp-image">
             <!-- Add more images here -->
         </div>
         <div class="carousel-dots"></div>
